<resources>
    <string name="app_name">JDK Steels</string>

    <string name="time_out">Server Time out.</string>
    <string name="try_again">Something went wrong. Please try again</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <!--common-->
    <string name="no_record">No Records</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="request_order">Get Quotation</string>
    <string name="place_order">Place Order</string>
    <string name="transition_cat">transition_category</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="home">Go to Home</string>
    <string name="request_quotation">Request Quotation</string>

    <!--Drawer string-->
    <string name="drawer_category">Categories</string>
    <string name="drawer_profile">My Profile</string>
    <string name="drawer_order">My Orders</string>
    <string name="drawer_bookmark">Bookmarks</string>
    <string name="drawer_about">About Us</string>
    <string name="drawer_contact_us">Contact Us</string>
    <string name="drawer_logout">Logout</string>

    <!--Option menu-->
    <string name="menu_cart">Order Book</string>
    <string name="menu_noti">Notification</string>
    <string name="menu_calc">Weight Calculator</string>

    <!--Toolbar titles-->
    <string name="categories_title">Categories</string>
    <string name="notification_title">Notifications</string>
    <string name="order_detail_title">Order Detail</string>
    <string name="quotation_detail_title">Quotation Detail</string>

    <string-array name="WheelArrayDefault">
        <item>Ft.</item>
        <item>Unit</item>
        <item>Kg</item>
    </string-array>

    <string name="cart_title">My Order Book</string>
    <string name="login_title">Login</string>
    <string name="registration_title">Registration</string>
    <string name="billing_title">Billing Address</string>

    <string name="dummy_text">There are many variations of passages of Lorem Ipsum available.</string>
    <string name="submit">SUBMIT</string>
    <string name="select_txt">SELECT</string>

    <string name="login_dialog">You must have Login or Register first.</string>
    <string name="payment_mode_dialog">Choose your payment mode</string>
    <string name="accept">Place Order</string>
    <string name="reject">Cancel Order</string>
    <string name="error">Some thing went wrong please try again later.</string>
    <string name="weight_limit">Weight of your order is too large. Are you sure want to proceed ?</string>
    <string name="user_in_active">Currently you are in active so please kindly contact to admin.</string>

    <string name="Rs">\u20B9</string>
</resources>
