<menu xmlns:android="http://schemas.android.com/apk/res/android">



        <item
            android:id="@+id/drawer_category"
            android:checked="true"
            android:icon="@drawable/ic_category"
            android:title="@string/drawer_category" />

        <item
            android:id="@+id/drawer_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/drawer_profile" />

        <item
            android:id="@+id/drawer_order"
            android:icon="@drawable/ic_order"
            android:title="@string/drawer_order" />

        <item
            android:id="@+id/drawer_bookmark"
            android:icon="@drawable/ic_add_bookmark"
            android:title="@string/drawer_bookmark" />

        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/ic_info"
            android:title="@string/drawer_about" />

        <item
            android:id="@+id/drawer_contact_us"
            android:icon="@drawable/ic_contact"
            android:title="@string/drawer_contact_us" />

</menu>
